# mexc-sniper-bot

./: .env.example  .env.secrets.template  .eslintrc.override.js  .gitignore  ACTIVE_TARGETS_CRUD_OPERATIONS_ANALYSIS.md  ACTIVE_TARGETS_IMPLEMENTATION_COMPLETE.md  ACTIVE_TARGETS_VERIFICATION_REPORT.md  ADVANCED_MONITORING_IMPLEMENTATION.md  AGENTS.md  AGENT_4_VALIDATION_REPORT.md  API_CREDENTIALS_DEBUG_ANALYSIS.md  API_CREDENTIALS_DEBUG_SOLUTION.md  API_MIDDLEWARE_SYSTEM_SUMMARY.md  API_RESPONSE_STANDARDIZATION_SUMMARY.md  ARCHITECTURE_MIGRATION_GUIDE.md  ASYNC_FIXES_SUMMARY.md  AUTH_INTEGRATION_REPORT.md  AUTH_TEST_IMPROVEMENTS.md  BACKEND_CODE_CLEANUP_REPORT.md  BACKEND_OPTIMIZATION_SUMMARY.md  BRANCH_TESTING_IMPLEMENTATION.md  BROWSER_COMPATIBILITY_REPORT.md  BUNDLE_OPTIMIZATION_COMPLETION_SUMMARY.md  BUNDLE_OPTIMIZATION_REPORT.md  BUNDLE_SIZE_OPTIMIZATION_IMPLEMENTATION_SUMMARY.md  CIRCUIT_BREAKER_FIX.md  CI_CD_SETUP_SUMMARY.md  CLAUDE copy.md  CLAUDE.md  CLEANUP_IMPLEMENTATION_PLAN.md  CLEANUP_REPORT.md  CLEAN_ARCHITECTURE_GAP_ANALYSIS.md  CLIENT-EXCEPTION-FIX-REPORT.md  CODEBASE_IMPROVEMENT_PLAN.md  COMPLEXITY_REDUCTION_REPORT.md  COMPONENT_ARCHITECTURE_OPTIMIZATION.md  COMPREHENSIVE_AUTOSNIPING_TEST_FIXES.md  COMPREHENSIVE_SYSTEM_VERIFICATION_REPORT.md  CRITICAL_TRADING_GAPS_ANALYSIS.md  DATABASE_COST_PREVENTION_PLAN.md  (+226 more)
.claude/: config.json
.codex/: README.md  agents.py  setup.py
.github/: CI_CD_DOCUMENTATION.md  CI_CD_TESTING_GUIDE.md  PROGRAMMATIC_SECRETS_SETUP.md  SECRETS_SETUP.md  dependabot.yml  pull_request_template.md
.metrics/: performance-2025-06-29T15-55-25.278Z.json  performance-2025-06-29T15-55-25.293Z.json  performance-2025-06-29T16-00-15.705Z.json  performance-2025-06-29T16-00-15.715Z.json  performance-2025-06-29T16-01-05.042Z.json  performance-2025-06-29T16-01-05.062Z.json
REFACTOR_DOCS/: BLOCKERS_AND_GAPS_ANALYSIS.md  CLEAN_ARCHITECTURE_MIGRATION_GUIDE_V2.md  IMMEDIATE_ACTION_PLAN.md  IMPLEMENTATION_GUIDE_FINAL.md  IMPLEMENTATION_GUIDE_UPDATED.md  MIGRATION_SUMMARY.md
alembic/: env.py
api/: agents.py  inngest.py
app/: error.tsx  globals.css  layout.tsx  page-fixed.tsx  page.tsx
bundle-reports/: bundle-analysis-1749947457467.json  bundle-analysis-1749947584414.json
deployment/: MONITORING-VERIFICATION-SETUP-COMPLETE.md  PRODUCTION-DEPLOYMENT-GUIDE.md  RAILWAY-MIGRATION-COMPLETE.md  production-deployment-config.md  production-env-template.env  production-verification.ts
docs/: API_CLIENT_UNIFICATION_ANALYSIS.md  API_MIDDLEWARE_MIGRATION_GUIDE.md  AUTHENTICATION_IMPLEMENTATION_SUMMARY.md  AUTH_TROUBLESHOOTING_GUIDE.md  DEVELOPER_AUTH_ONBOARDING_GUIDE.md  DOCUMENTATION_ORGANIZATION_SUMMARY.md  ENVIRONMENT_SETUP.md  NEXTAUTH_TO_SUPABASE_MIGRATION_GUIDE.md  RATE_LIMIT_HANDLING_SYSTEM.md  README.md  SMTP_CONFIGURATION_GUIDE.md  SUPABASE_AUTH_RATE_LIMIT_FIX.md  SUPABASE_EMAIL_CONFIRMATION_SETUP.md  agent-architecture.md  agent-configuration.md  agent-orchestrator-roles.md  agent-system-index.md  api-trigger-routes.md  coin-discovery-monitoring-flow.md  database-foreign-key-migration.md  deployment-verification-report.md  enhanced-kinde-auth-plan.md  error-handling-migration-guide.md  multi-agent-coordination.md  new_pattern.md  new_strategies.md  pattern-detection-algorithms.md  refactor-plan.md  sniper-system.md  sprint_checklist_ts_migration.md  tl-systems.md  typescript-multi-agent-architecture.md  vercel-configuration.md  workflow-orchestration.md
logs/: error-logs-2025-06-28.json  error-logs-2025-06-29.json  error-logs-2025-06-30.json  error-logs-2025-07-02.json  error-logs-2025-07-04.json  error-logs-2025-07-05.json
memory/: claude-flow-data.json
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
monitoring/: README.md  auth-monitoring-config.yml  grafana-auth-dashboard.json
patches/: expo-modules-core+2.4.0.patch
playwright-report/: index.html  junit.xml
reports/: auto-sniping-readiness-1750636191530.json  dependency-audit-report.md  dependency-optimization-final-report.md  mexc-connectivity-1750636268497.json  mexc-connectivity-1751025121435.json  production-testing-automation-summary.json  swarm-development-centralized-1750622860428.json  swarm-development-centralized-1750625773526.json  swarm-development-centralized-1750663607616.json  swarm-development-centralized-1750698464431.json  swarm-development-centralized-1750706621978.json  swarm-development-centralized-1750730455313.json  swarm-development-centralized-1750730967839.json  swarm-development-centralized-1750731346647.json  swarm-development-centralized-1750770880006.json  swarm-development-centralized-1750785001918.json  swarm-development-centralized-1750795427553.json  swarm-development-centralized-1750832658063.json  swarm-development-centralized-1750910417468.json  swarm-development-centralized-1750970063846.json  swarm-development-centralized-1751057751532.json  test-fix-completion-report.json  ui-status-synchronization-implementation-report.md
scripts/: analyze-auto-sniping-readiness.ts  analyze-test-coverage.ts  benchmark-dynamic-imports-performance.ts  benchmark-risk-calculation-performance.ts  bundle-analysis.ts  bypass-email-confirmation.ts  check-auth-setup.sh  check-db.ts  check-safety-system.ts  check-snipe-targets.ts  comprehensive-system-fix.ts  configure-production-sniping.mjs  database-health-diagnostic.ts  database-migration-runner.ts  database-schema-health-check.ts  debug-balance-api.ts  debug-ready-targets.ts  demo-stagehand-auth-node.ts  demo-stagehand-auth.ts  dependency-cleanup.ts  deploy-production.ts  emergency-quota-fix.ts  environment-setup.ts  fix-all-timeouts.ts  fix-browser-compatibility.ts  fix-circuit-breaker.ts  fix-hook-timeouts.ts  fix-status-contradictions.ts  get-vercel-ips.sh  instrumentation.ts  integration-summary.js  lint-and-format.sh  make-target-ready.ts  manage-test-branches.ts  memory-leak-audit-report.ts  merge-coverage.js  migrate-console-logging.ts  migrate-encryption.ts  migrate-error-handling.ts  migrate-to-unified-mexc.ts  (+58 more)
src/: __init__.py  (+7 more)
(+2042 files in other folders)
